--- a/airflow_dags/dags/mobile_phone_plans_etl_dag.env.example
+++ b/airflow_dags/dags/mobile_phone_plans_etl_dag.env.example
@@ -2,3 +2,4 @@ BASE_URL=https://www.quechoisir.org/comparateur-forfait-mobile-n43896/
 PROJECT_ID=
 BUCKET_NAME=
 RAW_BASE_DIR=
+TRANSFORMED_BASE_DIR=
