--- a/mobile_phone_plans/.bumpversion.toml
+++ b/mobile_phone_plans/.bumpversion.toml
@@ -21,6 +21,6 @@ pre_commit_hooks = []
 post_commit_hooks = []
 
 [[tool.bumpversion.files]]
-filename = "VERSION"
+filename = "etl/__version__.py"
 search = '{current_version}'
 replace = '{new_version}'
