--- a/mobile_phone_plans/pyproject.toml
+++ b/mobile_phone_plans/pyproject.toml
@@ -5,6 +5,7 @@ description = "Mobile phone plans ETL"
 readme = "README.md"
 requires-python = ">=3.11,<3.14"
 dependencies = [
+    "beautifulsoup4>=4.14.3",
     "click>=8.3.1",
     "google-cloud-logging>=3.12.1",
     "google-cloud-storage>=3.6.0",
