--- a/mobile_phone_plans/.env.example
+++ b/mobile_phone_plans/.env.example
@@ -1,4 +1,6 @@
 BASE_URL="https://www.quechoisir.org/comparateur-forfait-mobile-n43896/"
-GCP_PROJECT_ID=
+PROJECT_ID=
 BUCKET_NAME=
 RAW_BASE_DIR=
+TRANSFORMED_BASE_DIR=
+DATASET=
