--- a/mobile_phone_plans/pyproject.toml
+++ b/mobile_phone_plans/pyproject.toml
@@ -7,12 +7,15 @@ requires-python = ">=3.11,<3.14"
 dependencies = [
     "beautifulsoup4>=4.14.3",
     "click>=8.3.1",
+    "google-cloud-bigquery-storage>=2.35.0",
     "google-cloud-logging>=3.12.1",
     "google-cloud-storage>=3.6.0",
     "python-dotenv>=1.2.1",
     "pytz>=2025.2",
     "pyyaml>=6.0.3",
     "selenium>=4.39.0",
+    "sqlalchemy-bigquery>=1.16.0",
+    "tqdm>=4.67.1",
 ]
 
 authors = [
