#5 feat: Implement Airflow ETL pipeline for mobile phone plans with a dedicated DAG and orchestration scripts.

--- a/mobile_phone_plans/Dockerfile
+++ b/mobile_phone_plans/Dockerfile
@@ -37,6 +37,9 @@ COPY pyproject.toml README.md ./
 # Copy configuration files
 COPY config ./config
 
+# Copy Airflow dags
+COPY dags ./dags
+
 # Install project dependencies (including dev deps)
 RUN uv sync
 
